plugins {
    id 'java'
    id 'idea'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id 'org.beryx.jlink' version '2.25.0'
    id "org.javamodularity.moduleplugin" version "1.8.10"
}

ext {
    lombokVersion = '1.18.22'
    slf4jVersion = '1.7.36'
    jclOverSlf4jVersion = '1.7.36'
    logbackVersion = '1.2.10'
    janinoVersion = "3.1.6"
    luceneVersion = '9.0.0'
    junitVersion = '5.8.2'
    mockitoVersion = '4.6.0'
    assertjVersion = '3.22.0'
    reactorVersion = '3.4.14'
    guavaVersion = '31.0.1-jre'
    tikaVersion = '2.1.0'
    daggerVersion = '2.41'
    javaFxVersion = '17.0.1'
    fontAwesomeFxVersion = '2.2.0-9.1.2'
    testFxVersion = '4.0.16-alpha'
    gsonVersion = "2.9.0"
    jsonAssertVersion = '1.5.0'
    xercesImplVersion = '2.12.2'
    jSystemThemeDetectorVersion = '3.8'
    failsafeVersion = '3.2.3'
    defaultMainClass = 'com.bytedompteur.documentfinder.DocumentFinderMain'
}

group 'com.bytedompteur'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    all*.exclude group: 'xml-apis'
    all*.exclude group: 'commons-logging'
}

dependencies {
    //  ============================================
    //  Runtime
    //  ============================================
    implementation "xerces:xercesImpl:${xercesImplVersion}"
    implementation "dev.failsafe:failsafe:${failsafeVersion}"
    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
    implementation "ch.qos.logback:logback-classic:${logbackVersion}"
    implementation "org.slf4j:jcl-over-slf4j:${jclOverSlf4jVersion}" // Route Apache Tika logs to Logback
    implementation "org.codehaus.janino:janino:${janinoVersion}"
    implementation "org.apache.lucene:lucene-core:${luceneVersion}"
    implementation "org.apache.lucene:lucene-queryparser:${luceneVersion}"
    implementation "org.apache.lucene:lucene-analysis-common:${luceneVersion}"
    implementation "io.projectreactor:reactor-core:${reactorVersion}"
    implementation "com.google.guava:guava:${guavaVersion}"
    implementation "org.apache.tika:tika-core:${tikaVersion}"
    implementation "org.apache.tika:tika-parser-pdf-module:${tikaVersion}"
    implementation "org.apache.tika:tika-parser-miscoffice-module:${tikaVersion}"
    implementation "org.apache.tika:tika-parser-microsoft-module:${tikaVersion}"
    implementation "org.apache.tika:tika-parser-apple-module:${tikaVersion}"
    implementation "org.apache.tika:tika-parser-text-module:${tikaVersion}"
    implementation "com.google.dagger:dagger:${daggerVersion}"
    implementation "de.jensd:fontawesomefx-materialicons:${fontAwesomeFxVersion}"
    implementation "com.google.code.gson:gson:${gsonVersion}"
    implementation "com.github.Dansoftowner:jSystemThemeDetector:${jSystemThemeDetectorVersion}"

    //  ============================================
    //  Compile only
    //  ============================================
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"

    //  ============================================
    //  Test
    //  ============================================
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"

    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testImplementation "io.projectreactor:reactor-test:${reactorVersion}"
    testImplementation "org.testfx:testfx-core:${testFxVersion}"
    testImplementation "org.testfx:testfx-junit5:${testFxVersion}"
    testImplementation "org.skyscreamer:jsonassert:${jsonAssertVersion}"

}

test {
    useJUnitPlatform()
    // Disable Java modules (Jigsaw) while running tests. See gradle-modules-plugin.
    moduleOptions {
        runOnClasspath = true
    }
}

compileTestJava {
    // Disable Java modules (Jigsaw) while running tests. See gradle-modules-plugin.
    moduleOptions {
        compileOnClasspath = true
    }
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
        // Subdirectory in the project which acts as the application home dir while developing.
        excludeDirs += file("index-dev")
    }
}

//As documented here https://openjfx.io/openjfx-docs/#gradle
javafx {
    version = "${javaFxVersion}"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
}

application {
    mainClass = project.hasProperty('applicationMainClassOverwrite') ? project.getProperty('applicationMainClassOverwrite') : project.defaultMainClass
    mainModule = 'DocumentFinder.main'
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--verbose']
    launcher {
        name = 'DocumentFinder'
    }
    jpackage {
        appVersion = '1.0.0'
        installerOptions = ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
    }
    /*
     * All setting are found out in trial and error process. See also 'create-image-with-jlink.md' in the documentation
     * directory.
     */
    mergedModule {
        uses "org.apache.lucene.analysis.TokenizerFactory"
        uses "org.apache.lucene.analysis.TokenFilterFactory"
        uses "org.apache.lucene.codecs.Codec"
        uses "org.apache.lucene.codecs.PostingsFormat"

        excludeProvides servicePattern: 'org.w3c.dom.DOMImplementationSourceList'
        excludeProvides servicePattern: 'org.xml.sax.driver'
        excludeProvides servicePattern: 'org.apache.xmlbeans.impl.store.PathDelegate.SelectPathInterface'
        excludeProvides servicePattern: 'javax.servlet.ServletContainerInitializer'
        excludeProvides servicePattern: 'org.apache.xmlbeans.impl.store.QueryDelegate.QueryInterface'
        excludeProvides servicePattern: 'reactor.blockhound.integration.BlockHoundIntegration'
    }
    addExtraDependencies('javafx')
}
